@@ -1,0 +1,16 @@
+/*
+ * package-info.java
+ *
+ * Copyright: 2010-2014 Karell Bertet, France
+ *
+ * License: http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.html CeCILL-B license
+ *
+ * This file is part of java-lattices, free package. You can redistribute it and/or modify
+ * it under the terms of CeCILL-B license.
+ */
+
+/**
+ * This package is for testing the dgraph.io package.
+ */
+package fr.kbertet.dgraph.io;
+
